2024-01-31T01:06:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7719671166 # 72
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 54 98 / 55 99
* notice: next accum: outdated-unq outdated-all / unq all: 55 99 / 56 100
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-08-19] / [2024-01-30]

2023-08-19T16:06:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5912336923 # 1101
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 53 95 / 54 98
* notice: next accum: outdated-unq outdated-all / unq all: 54 98 / 55 99
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-14] / [2023-08-19]

2023-07-14T16:08:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5556054191 # 993
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
* notice: last 14d: unq all: 1 3
* notice: prev accum: outdated-unq outdated-all / unq all: 52 94 / 53 95
* notice: next accum: outdated-unq outdated-all / unq all: 53 95 / 54 98
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2023-06-30] / [2023-07-14]

2023-07-12T08:10:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5529161098 # 986